--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react": "^16.13.1",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
+    "react-particles-js": "^3.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
